compiler/tests/fixtures/invalid/semantics/reaction_queues_undefined_plan_selector.viv
// Invalid: reaction queues undefined plan selector

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue plan-selector nonexistent:
            with none:
